force/src/objects/Premier_Benefit__c.object
<CustomObject>
    <fields>
        <fullName>Benefit_Amount__c</fullName>
        <label>Benefit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Benefit_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Benefit Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benefit_Discount__c</fullName>
        <label>Benefit Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Benefit_Type__c</fullName>
        <label>Benefit Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <label>Premier Benefit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Benefit_Type__c</columns>
        <columns>Benefit_Amount__c</columns>
        <columns>Benefit_Discount__c</columns>
        <columns>Benefit_Checkbox__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Premier Benefits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Premier_WhenBenefitTypeIsCheckbox</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Benefit_Type__c , &apos;Checkbox&apos;) 

&amp;&amp; 

(Benefit_Checkbox__c = false

|| 

NOT(ISBLANK(Benefit_Amount__c))

|| 

NOT(ISBLANK(Benefit_Discount__c)))

&amp;&amp; 

NOT(OR( 
$Profile.Name = &quot;System Administrator&quot;, 
$Profile.Name = &quot;VSP Technical User&quot;) 
)</errorConditionFormula>
        <errorMessage>You must check Benefit Checkbox. Benefit Amount and Benefit Discount is not allowed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Premier_WhenBenefitTypeIsCurrency</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Benefit_Type__c , &apos;Currency&apos;)

&amp;&amp; 

(ISBLANK(Benefit_Amount__c) 

||

(NOT(ISBLANK( Benefit_Discount__c)) 

||
 
Benefit_Checkbox__c = true))

&amp;&amp; 

NOT(OR( 
$Profile.Name = &quot;System Administrator&quot;, 
$Profile.Name = &quot;VSP Technical User&quot;) 
)</errorConditionFormula>
        <errorMessage>You must enter a Benefit Amount. Benefit Discount and Benefit Checkbox is not allowed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Premier_WhenBenefitTypeIsDiscount</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Benefit_Type__c , &apos;Discount&apos;) 

&amp;&amp; 

(ISBLANK(Benefit_Discount__c) 

|| 

NOT(ISBLANK(Benefit_Amount__c)) 

|| 

Benefit_Checkbox__c = true)

&amp;&amp; 

NOT(OR( 
$Profile.Name = &quot;System Administrator&quot;, 
$Profile.Name = &quot;VSP Technical User&quot;) 
)</errorConditionFormula>
        <errorMessage>You must enter a Benefit Discount. Benefit Amount and Benefit Checkbox is not allowed.</errorMessage>
    </validationRules>
</CustomObject>